Tmux Config Updated

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,12 @@
 %hidden black="#1e222a"
-%hidden green="#7eca9c"
+%hidden green="#7EC7A2"
 %hidden white="#abb2bf"
 %hidden grey="#282c34"
-%hidden blue="#7aa2f7"
-%hidden red="#d47d85"
-%hidden darkblue="#668ee3"
+%hidden blue="#61afef"
+%hidden red="#e06c75"
+%hidden orange="#caaa6a"
+%hidden pink="#c678dd"
+%hidden yellow="#EBCB8B"
 
 bind -n M-q last-pane
 bind -n M-w last-window
@@ -42,8 +44,8 @@ set -g status-right-length 150
 set -g status-left "#(~/.config/tmux/tmux-bar-left.sh)"
 set -g status-right "#(~/.config/tmux/tmux-bar-right.sh)"
 
-# Window status
-set -g window-status-format "#[fg=#{white},bg=#{black}] #I:#W "
-set -g window-status-current-format "#[fg=#{black},bg=#{blue}] #I:#W #[fg=#{blue},bg=#{black}]"
+# Window status - different colors and icons per window index (matching dwm tags)
+set -g window-status-format "#{?#{==:#{window_index},0},#[fg=#545862]   ,#{?#{==:#{window_index},1},#[fg=#545862]   ,#{?#{==:#{window_index},2},#[fg=#545862]   ,#{?#{==:#{window_index},3},#[fg=#545862]   ,#[fg=#545862]   }}}}"
+set -g window-status-current-format "#{?#{==:#{window_index},0},#[fg=#{blue}]   ,#{?#{==:#{window_index},1},#[fg=#{red}]   ,#{?#{==:#{window_index},2},#[fg=#{orange}]   ,#{?#{==:#{window_index},3},#[fg=#{green}]   ,#[fg=#{pink}]   }}}}"
 set -g window-status-separator ""
 
